Fix layout issue

--- a/Sandervanteinde.AdventOfCode2021/Shared/NavMenu.razor.css
+++ b/Sandervanteinde.AdventOfCode2021/Shared/NavMenu.razor.css
@@ -1,6 +1,6 @@
 aside {
     box-shadow: 0px 5px 17px 3px #000000;
-    height: 100%;
+    min-height: 100%;
     width: 100%;
     z-index: 1;
 }
